test/Fail/AttributeConflict.agda
-- Andreas, 2018-06-09, issue #2513, parsing attributes

postulate
  @0 @ω A : Set

-- Should fail with error:
-- Conflicting attributes: 0 ω
