test/Fail/AttributeConflict.err
AttributeConflict.agda:4.3: error: [ParseError]
Conflicting attributes: 0 ω
